// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.emotion-12 {
  margin-left: 5px;
  margin-right: 5px;
  padding-top: 1%;
  width: calc(100% - 10px);
  float: left;
}

.emotion-2 {
  width: 270px;
  margin-left: 5px;
}

.emotion-0 {
  font-weight: bold;
  margin-left: 5px;
}

.emotion-1 {
  text-align: left;
}

.emotion-10 {
  min-height: 350px;
  padding-left: 5px;
}

.emotion-3 {
  opacity: 0.5;
}

.emotion-3:hover {
  cursor: progress;
}

<div
  className="emotion-12"
>
  <div
    className="emotion-1"
  >
    <p
      className="emotion-0"
    >
      Destination
    </p>
  </div>
  <div
    className="css-1m1gf12"
  >
    <div
      onClick={[Function]}
    >
      <input
        checked={true}
        className="css-17uch7d"
        onChange={[Function]}
        type="radio"
        value="queue"
      />
      <div
        className="css-mxbhzi css-e0oiph css-wni10w css-1nkn65"
      >
        <p>
          Queue
        </p>
      </div>
    </div>
    <div
      className="css-10nd86i css-1kaxahw"
      id="queue-dropdown"
      onKeyDown={[Function]}
    >
      <div
        className="css-1aya2g8"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1rtrksz"
        >
          <div
            className="css-1492t68"
          >
            Select...
          </div>
          <div
            className="css-rsyb7x"
          >
            <div
              className=""
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                aria-label={undefined}
                aria-labelledby={undefined}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className={undefined}
                disabled={false}
                id="react-select-2-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6"
        >
          <span
            className="css-d8oujb"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-1m1gf12"
  >
    <div
      onClick={[Function]}
    >
      <input
        checked={false}
        className="css-17uch7d"
        onChange={[Function]}
        type="radio"
        value="topic"
      />
      <div
        className="css-mxbhzi css-e0oiph css-wni10w css-1nkn65"
      >
        <p>
          Topic
        </p>
      </div>
    </div>
    <div
      className="css-1sontr1 css-1kaxahw"
      id="topic-dropdown"
      onKeyDown={[Function]}
    >
      <div
        className="css-162g8z5"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1rtrksz"
        >
          <div
            className="css-1492t68"
          >
            Select...
          </div>
          <div
            className="css-rsyb7x"
          >
            <div
              className=""
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                aria-label={undefined}
                aria-labelledby={undefined}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className={undefined}
                disabled={true}
                id="react-select-3-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6"
        >
          <span
            className="css-ln5n5c"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <br />
  <br />
  <hr />
  <div
    className="css-mxbhzi"
  >
    <p
      className="css-wni10w"
    >
      Pre-defined Properties
    </p>
  </div>
  <div />
  <form>
    <div
      className="emotion-1"
    >
      <button
        className="emotion-2 emotion-3 btn btn-default"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Loading pre-defined properties...
      </button>
    </div>
  </form>
  <hr />
  <div
    className="emotion-1"
  >
    <p
      className="emotion-0"
    >
      User-defined Properties
    </p>
  </div>
  <div />
  <form>
    <div
      className="emotion-1"
    >
      <button
        className="emotion-2 btn btn-default"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Add new application specific property
      </button>
    </div>
  </form>
  <hr />
  <form>
    <div
      className="emotion-1 form-group"
    >
      <label
        className="emotion-0 control-label"
        htmlFor="formControlsMessageBodyText"
      >
        Body
      </label>
      <textarea
        className="emotion-10 form-control"
        id="formControlsMessageBodyText"
        onChange={[Function]}
        placeholder="Enter message body"
        type={undefined}
        value=""
      />
    </div>
  </form>
  <form>
    <button
      className="btn btn-default"
      disabled={false}
      id="submitButton"
      onClick={[Function]}
      type="button"
    >
      Submit
    </button>
    <button
      className="btn btn-danger"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Reset Fields
    </button>
  </form>
</div>
`;

exports[`renders correctly from a predefined message 1`] = `
.emotion-24 {
  margin-left: 5px;
  margin-right: 5px;
  padding-top: 1%;
  width: calc(100% - 10px);
  float: left;
}

.emotion-2 {
  width: 270px;
  margin-left: 5px;
}

.emotion-0 {
  font-weight: bold;
  margin-left: 5px;
}

.emotion-1 {
  text-align: left;
}

.emotion-22 {
  min-height: 350px;
  padding-left: 5px;
}

.emotion-3 {
  opacity: 0.5;
}

.emotion-3:hover {
  cursor: progress;
}

.emotion-8 {
  padding-left: 5px;
  width: 20%;
  float: left;
}

.emotion-10 {
  padding-left: 5px;
  width: calc(80% - 80px);
  float: left;
}

.emotion-12 {
  padding-left: 5px;
  width: 80px;
  float: left;
}

.emotion-7 {
  min-height: 38px;
}

<div
  className="emotion-24"
>
  <div
    className="emotion-1"
  >
    <p
      className="emotion-0"
    >
      Destination
    </p>
  </div>
  <div
    className="css-1m1gf12"
  >
    <div
      onClick={[Function]}
    >
      <input
        checked={true}
        className="css-17uch7d"
        onChange={[Function]}
        type="radio"
        value="queue"
      />
      <div
        className="css-mxbhzi css-e0oiph css-wni10w css-1nkn65"
      >
        <p>
          Queue
        </p>
      </div>
    </div>
    <div
      className="css-10nd86i css-1kaxahw"
      id="queue-dropdown"
      onKeyDown={[Function]}
    >
      <div
        className="css-1aya2g8"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1rtrksz"
        >
          <div
            className="css-1492t68"
          >
            Select...
          </div>
          <div
            className="css-rsyb7x"
          >
            <div
              className=""
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                aria-label={undefined}
                aria-labelledby={undefined}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className={undefined}
                disabled={false}
                id="react-select-4-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6"
        >
          <span
            className="css-d8oujb"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-1m1gf12"
  >
    <div
      onClick={[Function]}
    >
      <input
        checked={false}
        className="css-17uch7d"
        onChange={[Function]}
        type="radio"
        value="topic"
      />
      <div
        className="css-mxbhzi css-e0oiph css-wni10w css-1nkn65"
      >
        <p>
          Topic
        </p>
      </div>
    </div>
    <div
      className="css-1sontr1 css-1kaxahw"
      id="topic-dropdown"
      onKeyDown={[Function]}
    >
      <div
        className="css-162g8z5"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className="css-1rtrksz"
        >
          <div
            className="css-1492t68"
          >
            Select...
          </div>
          <div
            className="css-rsyb7x"
          >
            <div
              className=""
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <input
                aria-autocomplete="list"
                aria-label={undefined}
                aria-labelledby={undefined}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className={undefined}
                disabled={true}
                id="react-select-5-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                spellCheck="false"
                style={
                  Object {
                    "background": 0,
                    "border": 0,
                    "boxSizing": "content-box",
                    "color": "inherit",
                    "fontSize": "inherit",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "1px",
                  }
                }
                tabIndex="0"
                type="text"
                value=""
              />
              <div
                style={
                  Object {
                    "height": 0,
                    "left": 0,
                    "overflow": "scroll",
                    "position": "absolute",
                    "top": 0,
                    "visibility": "hidden",
                    "whiteSpace": "pre",
                  }
                }
              >
                
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-1wy0on6"
        >
          <span
            className="css-ln5n5c"
          />
          <div
            aria-hidden="true"
            className="css-1ep9fjw"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-19bqh2r"
              focusable="false"
              height={20}
              viewBox="0 0 20 20"
              width={20}
            >
              <path
                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <br />
  <br />
  <hr />
  <div
    className="css-mxbhzi"
  >
    <p
      className="css-wni10w"
    >
      Pre-defined Properties
    </p>
  </div>
  <div />
  <form>
    <div
      className="emotion-1"
    >
      <button
        className="emotion-2 emotion-3 btn btn-default"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Loading pre-defined properties...
      </button>
    </div>
  </form>
  <hr />
  <div
    className="emotion-1"
  >
    <p
      className="emotion-0"
    >
      User-defined Properties
    </p>
  </div>
  <div>
    <div>
      <form
        className="emotion-8"
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <input
            className="emotion-7 form-control"
            id="formControlsText"
            onChange={[Function]}
            placeholder="Enter property name"
            type="text"
            value="userDefinedProp1"
          />
        </div>
      </form>
      <form
        className="emotion-10"
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <input
            className="emotion-7 form-control"
            id="formControlsText"
            onChange={[Function]}
            placeholder="Enter property value"
            type="text"
            value="value1"
          />
        </div>
      </form>
      <div
        className="emotion-12"
      >
        <button
          className="emotion-7 btn btn-danger"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Delete
        </button>
      </div>
    </div>
    <div>
      <form
        className="emotion-8"
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <input
            className="emotion-7 form-control"
            id="formControlsText"
            onChange={[Function]}
            placeholder="Enter property name"
            type="text"
            value="userDefinedProp2"
          />
        </div>
      </form>
      <form
        className="emotion-10"
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <input
            className="emotion-7 form-control"
            id="formControlsText"
            onChange={[Function]}
            placeholder="Enter property value"
            type="text"
            value="value2"
          />
        </div>
      </form>
      <div
        className="emotion-12"
      >
        <button
          className="emotion-7 btn btn-danger"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Delete
        </button>
      </div>
    </div>
  </div>
  <form>
    <div
      className="emotion-1"
    >
      <button
        className="emotion-2 btn btn-default"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Add new application specific property
      </button>
    </div>
  </form>
  <hr />
  <form>
    <div
      className="emotion-1 form-group"
    >
      <label
        className="emotion-0 control-label"
        htmlFor="formControlsMessageBodyText"
      >
        Body
      </label>
      <textarea
        className="emotion-22 form-control"
        id="formControlsMessageBodyText"
        onChange={[Function]}
        placeholder="Enter message body"
        type={undefined}
        value="Hello world!"
      />
    </div>
  </form>
  <form>
    <button
      className="btn btn-default"
      disabled={false}
      id="submitButton"
      onClick={[Function]}
      type="button"
    >
      Submit
    </button>
    <button
      className="btn btn-danger"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Reset Fields
    </button>
  </form>
</div>
`;
